[package]
name = "mindmap"
version = "0.1.0"
authors = ["shadowzeng <540714513@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-cors = "0.5.4"

diesel = { version = "1.4.5", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"
derive_more = "0.99.2"

serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"

futures = "0.3.12"
dotenv = "0.15.0"
chrono = { version = "0.4.19", features = ["serde"] }

env_logger = "0.8"
log = "0.4"
